--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "helmet": "^3.6.1",
+    "material-ui": "^0.20.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
