--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "reset-css": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "7.1.0",
