--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dev-utils": "^3.0.0",
     "react-error-overlay": "^1.0.7",
     "react-test-renderer": "^15.6.1",
+    "redux-devtools-extension": "^2.13.2",
     "style-loader": "0.17.0",
     "supertest": "^3.0.0",
     "sw-precache-webpack-plugin": "0.9.1",
