--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.2",
     "express": "^4.15.3",
     "helmet": "^3.6.1",
     "material-ui": "^0.20.0",
@@ -14,7 +14,9 @@
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.0",
     "redux-thunk": "^2.2.0",
-    "reset-css": "^2.2.1"
+    "reset-css": "^2.2.1",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5"
   },
   "devDependencies": {
     "autoprefixer": "7.1.0",
@@ -29,7 +31,7 @@
     "chalk": "1.1.3",
     "css-loader": "0.28.1",
     "debug": "^2.6.8",
-    "dotenv": "4.0.0",
+    "dotenv": "^4.0.0",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
